code-review-management/app/(pages)/dashboard/page.module.css
.page {
  display: flex;
  min-height: 100vh;
}

.repoSideBar {
  width: 320px;
  border-right: 1px solid var(--border-gray-secondary); /* TODO: Border shouldn't span entire height */
}

.pageBody {
  flex: 1;
  padding: var(--spacer-48);

  display: flex;
  flex-direction: column;
  gap: var(--spacer-8);
}

.searchPullTitleWrapper {
  position: relative;
  display: flex;
}

.searchPullTitle {
  flex: 1;
  padding: 10px 20px;
  border-radius: 32px;
  border: 1px solid var(--border-gray-secondary);
}

.searchButtons {
  position: absolute;
  right: 10px;
  height: 100%;
  display: flex;
  align-items: center;
  gap: var(--spacer-4);
}

.searchButtons button {
  border: none;
  background: none;
  cursor: pointer;
}

.searchButtonsDivider {
  height: 20px;
  border-left: 1px solid var(--border-gray-secondary);
}

.loadingSpinnerWrapper {
  display: flex;
  justify-content: center;
}

.moreButton {
  border: none;
  background-color: var(--background-secondary-light);
  padding: var(--spacer-8);
  border-radius: 0 0 8px 8px;
  cursor: pointer;
}

